ME_QTRIPDYNAMIC_MODULE_FILTERS

--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -147,6 +147,7 @@
             // 1. Change the DOM to show the selected duration filter. Use the provided input event
             // 2. Invoke saveFiltersToLocalStorage here
 
+
         }
 
         //executed when clear button is clicked on duration filter dropdown
@@ -177,6 +178,7 @@
 
             // TODO: MODULE_FILTERS
             // 1. Invoke saveFiltersToLocalStorage here
+            saveFiltersToLocalStorage(filteredAdventures);
         }
 
         //executed when clear button is clicked on category filter dropdown
@@ -190,6 +192,7 @@
 
             // TODO: MODULE_FILTERS
             // 1. Invoke saveFiltersToLocalStorage here
+            saveFiltersToLocalStorage(filteredAdventures);
         }
 
         //helper function
